--- a/scss/style.scss
+++ b/scss/style.scss
@@ -31,14 +31,14 @@
 
 /* :: 2.0 Import All CSS */
 
-@import 'css/bootstrap.min.css';
-@import 'css/owl.carousel.min.css';
-@import 'css/animate.css';
-@import 'css/magnific-popup.css';
-@import 'css/font-awesome.min.css';
-@import 'css/custom-icon.css';
-@import 'css/classy-nav.min.css';
-@import 'css/nice-select.min.css';
+@import 'bootstrap.min.css';
+@import 'owl.carousel.min.css';
+@import 'animate.css';
+@import 'magnific-popup.css';
+@import 'font-awesome.min.css';
+@import 'custom-icon.css';
+@import 'classy-nav.min.css';
+@import 'nice-select.min.css';
 
 /* :: 3.0 Base CSS */
 
@@ -584,7 +584,7 @@ textarea:focus {
 .hero-area {
     position: relative;
     z-index: 1;
-    padding: 10px 0 20px;
+    padding: 10px 0 1px;
     .breaking-news-area {
         position: relative;
         z-index: 1;
